// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entities /api/entities/count_by_template should have a validation schema 1`] = `
Object {
  "children": Object {
    "templateId": Object {
      "flags": Object {
        "presence": "required",
      },
      "invalids": Array [
        "",
      ],
      "rules": Array [
        Object {
          "arg": Object {
            "pattern": /\\^\\[0-9a-fA-F\\]\\{24\\}\\$/,
          },
          "name": "regex",
        },
      ],
      "type": "string",
    },
  },
  "flags": Object {
    "presence": "required",
  },
  "type": "object",
}
`;

exports[`entities DELETE /api/entities should have a validation schema 1`] = `
Object {
  "children": Object {
    "sharedId": Object {
      "flags": Object {
        "presence": "required",
      },
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
  },
  "flags": Object {
    "presence": "required",
  },
  "type": "object",
}
`;

exports[`entities GET should have a validation schema 1`] = `
Object {
  "children": Object {
    "omitRelationships": Object {
      "type": "any",
    },
    "sharedId": Object {
      "flags": Object {
        "presence": "required",
      },
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
  },
  "flags": Object {
    "presence": "required",
  },
  "type": "object",
}
`;

exports[`entities POST /api/entities/bulkdelete should have a validation schema 1`] = `
Object {
  "children": Object {
    "sharedIds": Object {
      "flags": Object {
        "presence": "required",
        "sparse": false,
      },
      "items": Array [
        Object {
          "invalids": Array [
            "",
          ],
          "type": "string",
        },
      ],
      "type": "array",
    },
  },
  "flags": Object {
    "presence": "required",
  },
  "type": "object",
}
`;

exports[`entities POST /entities/multipleupdate should have a validation schema 1`] = `
Object {
  "children": Object {
    "ids": Object {
      "flags": Object {
        "presence": "required",
        "sparse": false,
      },
      "items": Array [
        Object {
          "invalids": Array [
            "",
          ],
          "type": "string",
        },
      ],
      "type": "array",
    },
    "values": Object {
      "children": Object {
        "icon": Object {
          "children": Object {
            "_id": Object {
              "invalids": Array [
                "",
              ],
              "type": "string",
              "valids": Array [
                null,
              ],
            },
            "label": Object {
              "invalids": Array [
                "",
              ],
              "type": "string",
            },
            "type": Object {
              "invalids": Array [
                "",
              ],
              "type": "string",
            },
          },
          "type": "object",
        },
        "metadata": Object {
          "patterns": Array [
            Object {
              "rule": Object {
                "alternatives": Array [
                  Object {
                    "invalids": Array [
                      Infinity,
                      -Infinity,
                    ],
                    "type": "number",
                    "valids": Array [
                      "",
                      null,
                    ],
                  },
                  Object {
                    "type": "string",
                    "valids": Array [
                      "",
                      null,
                    ],
                  },
                  Object {
                    "children": Object {
                      "from": Object {
                        "invalids": Array [
                          Infinity,
                          -Infinity,
                        ],
                        "type": "number",
                        "valids": Array [
                          null,
                        ],
                      },
                      "to": Object {
                        "invalids": Array [
                          Infinity,
                          -Infinity,
                        ],
                        "type": "number",
                        "valids": Array [
                          null,
                        ],
                      },
                    },
                    "type": "object",
                    "valids": Array [
                      "",
                    ],
                  },
                  Object {
                    "flags": Object {
                      "sparse": false,
                    },
                    "items": Array [
                      Object {
                        "children": Object {
                          "label": Object {
                            "type": "string",
                            "valids": Array [
                              null,
                              "",
                            ],
                          },
                          "lat": Object {
                            "invalids": Array [
                              Infinity,
                              -Infinity,
                            ],
                            "type": "number",
                          },
                          "lon": Object {
                            "invalids": Array [
                              Infinity,
                              -Infinity,
                            ],
                            "type": "number",
                          },
                        },
                        "type": "object",
                      },
                    ],
                    "type": "array",
                    "valids": Array [
                      "",
                    ],
                  },
                  Object {
                    "children": Object {
                      "label": Object {
                        "invalids": Array [
                          "",
                        ],
                        "type": "string",
                      },
                      "url": Object {
                        "invalids": Array [
                          "",
                        ],
                        "type": "string",
                      },
                    },
                    "type": "object",
                    "valids": Array [
                      "",
                    ],
                  },
                  Object {
                    "flags": Object {
                      "sparse": false,
                    },
                    "items": Array [
                      Object {
                        "alternatives": Array [
                          Object {
                            "invalids": Array [
                              Infinity,
                              -Infinity,
                            ],
                            "type": "number",
                            "valids": Array [
                              null,
                            ],
                          },
                          Object {
                            "invalids": Array [
                              "",
                            ],
                            "type": "string",
                          },
                          Object {
                            "children": Object {
                              "from": Object {
                                "invalids": Array [
                                  Infinity,
                                  -Infinity,
                                ],
                                "type": "number",
                                "valids": Array [
                                  null,
                                ],
                              },
                              "to": Object {
                                "invalids": Array [
                                  Infinity,
                                  -Infinity,
                                ],
                                "type": "number",
                                "valids": Array [
                                  null,
                                ],
                              },
                            },
                            "type": "object",
                            "valids": Array [
                              "",
                            ],
                          },
                        ],
                        "type": "alternatives",
                      },
                    ],
                    "type": "array",
                    "valids": Array [
                      "",
                    ],
                  },
                  Object {
                    "flags": Object {
                      "sparse": false,
                    },
                    "items": Array [
                      Object {
                        "patterns": Array [
                          Object {
                            "rule": Object {
                              "flags": Object {
                                "sparse": false,
                              },
                              "items": Array [
                                Object {
                                  "invalids": Array [
                                    "",
                                  ],
                                  "type": "string",
                                },
                              ],
                              "type": "array",
                            },
                            "schema": Object {
                              "invalids": Array [
                                "",
                              ],
                              "type": "string",
                            },
                          },
                        ],
                        "type": "object",
                      },
                    ],
                    "type": "array",
                    "valids": Array [
                      "",
                    ],
                  },
                ],
                "type": "alternatives",
              },
              "schema": Object {
                "type": "string",
                "valids": Array [
                  "",
                ],
              },
            },
          ],
          "type": "object",
        },
        "published": Object {
          "falsy": Array [
            false,
          ],
          "flags": Object {
            "insensitive": true,
          },
          "truthy": Array [
            true,
          ],
          "type": "boolean",
        },
        "template": Object {
          "invalids": Array [
            "",
          ],
          "type": "string",
        },
      },
      "flags": Object {
        "presence": "required",
      },
      "type": "object",
    },
  },
  "flags": Object {
    "presence": "required",
  },
  "type": "object",
}
`;

exports[`entities POST get_raw_page should have a validation schema 1`] = `
Object {
  "children": Object {
    "pageNumber": Object {
      "flags": Object {
        "presence": "required",
      },
      "invalids": Array [
        Infinity,
        -Infinity,
      ],
      "type": "number",
    },
    "sharedId": Object {
      "flags": Object {
        "presence": "required",
      },
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
  },
  "flags": Object {
    "presence": "required",
  },
  "type": "object",
}
`;

exports[`entities POST should have a validation schema 1`] = `
Object {
  "children": Object {
    "__v": Object {
      "invalids": Array [
        Infinity,
        -Infinity,
      ],
      "type": "number",
    },
    "_id": Object {
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
    "attachments": Object {
      "flags": Object {
        "sparse": false,
      },
      "items": Array [
        Object {
          "children": Object {
            "_id": Object {
              "invalids": Array [
                "",
              ],
              "type": "string",
            },
            "filename": Object {
              "invalids": Array [
                "",
              ],
              "type": "string",
            },
            "mimetype": Object {
              "invalids": Array [
                "",
              ],
              "type": "string",
            },
            "originalname": Object {
              "invalids": Array [
                "",
              ],
              "type": "string",
            },
            "size": Object {
              "invalids": Array [
                Infinity,
                -Infinity,
              ],
              "type": "number",
            },
            "timestamp": Object {
              "invalids": Array [
                Infinity,
                -Infinity,
              ],
              "type": "number",
            },
          },
          "type": "object",
        },
      ],
      "type": "array",
    },
    "creationDate": Object {
      "invalids": Array [
        Infinity,
        -Infinity,
      ],
      "type": "number",
    },
    "file": Object {
      "children": Object {
        "filename": Object {
          "invalids": Array [
            "",
          ],
          "type": "string",
        },
        "language": Object {
          "invalids": Array [
            "",
          ],
          "type": "string",
        },
        "mimetype": Object {
          "invalids": Array [
            "",
          ],
          "type": "string",
        },
        "originalname": Object {
          "invalids": Array [
            "",
          ],
          "type": "string",
        },
        "size": Object {
          "invalids": Array [
            Infinity,
            -Infinity,
          ],
          "type": "number",
        },
        "timestamp": Object {
          "invalids": Array [
            Infinity,
            -Infinity,
          ],
          "type": "number",
        },
      },
      "type": "object",
    },
    "fullText": Object {
      "type": "any",
    },
    "icon": Object {
      "children": Object {
        "_id": Object {
          "invalids": Array [
            "",
          ],
          "type": "string",
          "valids": Array [
            null,
          ],
        },
        "label": Object {
          "invalids": Array [
            "",
          ],
          "type": "string",
        },
        "type": Object {
          "invalids": Array [
            "",
          ],
          "type": "string",
        },
      },
      "type": "object",
    },
    "language": Object {
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
    "metadata": Object {
      "patterns": Array [
        Object {
          "rule": Object {
            "alternatives": Array [
              Object {
                "invalids": Array [
                  Infinity,
                  -Infinity,
                ],
                "type": "number",
                "valids": Array [
                  "",
                  null,
                ],
              },
              Object {
                "type": "string",
                "valids": Array [
                  "",
                  null,
                ],
              },
              Object {
                "children": Object {
                  "from": Object {
                    "invalids": Array [
                      Infinity,
                      -Infinity,
                    ],
                    "type": "number",
                    "valids": Array [
                      null,
                    ],
                  },
                  "to": Object {
                    "invalids": Array [
                      Infinity,
                      -Infinity,
                    ],
                    "type": "number",
                    "valids": Array [
                      null,
                    ],
                  },
                },
                "type": "object",
                "valids": Array [
                  "",
                ],
              },
              Object {
                "flags": Object {
                  "sparse": false,
                },
                "items": Array [
                  Object {
                    "children": Object {
                      "label": Object {
                        "type": "string",
                        "valids": Array [
                          null,
                          "",
                        ],
                      },
                      "lat": Object {
                        "invalids": Array [
                          Infinity,
                          -Infinity,
                        ],
                        "type": "number",
                      },
                      "lon": Object {
                        "invalids": Array [
                          Infinity,
                          -Infinity,
                        ],
                        "type": "number",
                      },
                    },
                    "type": "object",
                  },
                ],
                "type": "array",
                "valids": Array [
                  "",
                ],
              },
              Object {
                "children": Object {
                  "label": Object {
                    "invalids": Array [
                      "",
                    ],
                    "type": "string",
                  },
                  "url": Object {
                    "invalids": Array [
                      "",
                    ],
                    "type": "string",
                  },
                },
                "type": "object",
                "valids": Array [
                  "",
                ],
              },
              Object {
                "flags": Object {
                  "sparse": false,
                },
                "items": Array [
                  Object {
                    "alternatives": Array [
                      Object {
                        "invalids": Array [
                          Infinity,
                          -Infinity,
                        ],
                        "type": "number",
                        "valids": Array [
                          null,
                        ],
                      },
                      Object {
                        "invalids": Array [
                          "",
                        ],
                        "type": "string",
                      },
                      Object {
                        "children": Object {
                          "from": Object {
                            "invalids": Array [
                              Infinity,
                              -Infinity,
                            ],
                            "type": "number",
                            "valids": Array [
                              null,
                            ],
                          },
                          "to": Object {
                            "invalids": Array [
                              Infinity,
                              -Infinity,
                            ],
                            "type": "number",
                            "valids": Array [
                              null,
                            ],
                          },
                        },
                        "type": "object",
                        "valids": Array [
                          "",
                        ],
                      },
                    ],
                    "type": "alternatives",
                  },
                ],
                "type": "array",
                "valids": Array [
                  "",
                ],
              },
              Object {
                "flags": Object {
                  "sparse": false,
                },
                "items": Array [
                  Object {
                    "patterns": Array [
                      Object {
                        "rule": Object {
                          "flags": Object {
                            "sparse": false,
                          },
                          "items": Array [
                            Object {
                              "invalids": Array [
                                "",
                              ],
                              "type": "string",
                            },
                          ],
                          "type": "array",
                        },
                        "schema": Object {
                          "invalids": Array [
                            "",
                          ],
                          "type": "string",
                        },
                      },
                    ],
                    "type": "object",
                  },
                ],
                "type": "array",
                "valids": Array [
                  "",
                ],
              },
            ],
            "type": "alternatives",
          },
          "schema": Object {
            "type": "string",
            "valids": Array [
              "",
            ],
          },
        },
      ],
      "type": "object",
    },
    "mongoLanguage": Object {
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
    "pdfInfo": Object {
      "type": "any",
    },
    "processed": Object {
      "falsy": Array [
        false,
      ],
      "flags": Object {
        "insensitive": true,
      },
      "truthy": Array [
        true,
      ],
      "type": "boolean",
    },
    "published": Object {
      "falsy": Array [
        false,
      ],
      "flags": Object {
        "insensitive": true,
      },
      "truthy": Array [
        true,
      ],
      "type": "boolean",
    },
    "sharedId": Object {
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
    "template": Object {
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
    "title": Object {
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
    "toc": Object {
      "flags": Object {
        "sparse": false,
      },
      "items": Array [
        Object {
          "children": Object {
            "_id": Object {
              "invalids": Array [
                "",
              ],
              "type": "string",
            },
            "indentation": Object {
              "invalids": Array [
                Infinity,
                -Infinity,
              ],
              "type": "number",
            },
            "label": Object {
              "invalids": Array [
                "",
              ],
              "type": "string",
            },
            "range": Object {
              "children": Object {
                "end": Object {
                  "invalids": Array [
                    Infinity,
                    -Infinity,
                  ],
                  "type": "number",
                },
                "start": Object {
                  "invalids": Array [
                    Infinity,
                    -Infinity,
                  ],
                  "type": "number",
                },
              },
              "type": "object",
            },
          },
          "type": "object",
        },
      ],
      "type": "array",
    },
    "totalPages": Object {
      "invalids": Array [
        Infinity,
        -Infinity,
      ],
      "type": "number",
    },
    "type": Object {
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
    "uploaded": Object {
      "falsy": Array [
        false,
      ],
      "flags": Object {
        "insensitive": true,
      },
      "truthy": Array [
        true,
      ],
      "type": "boolean",
    },
    "user": Object {
      "invalids": Array [
        "",
      ],
      "type": "string",
    },
  },
  "flags": Object {
    "presence": "required",
  },
  "type": "object",
}
`;
